syntax = "proto3";

import "user-service.proto";

package harmonify.user_service;

service UserService {
    rpc authenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
    rpc getUser(GetUserRequest) returns (GetUserResponse);
}
